package aula08.ex1a;

public enum User {
     OWNER, COMPANY
}
