@startuml

title __EX1A's Class Diagram__\n

  package aula08.ex1a {
    interface BankAccount {
        {abstract} + deposit()
        {abstract} + withdraw()
        {abstract} + balance()
    }
  }
  

  package aula08.ex1a {
    class BankAccountImpl {
        - bank : String
        - balance : double
        ~ BankAccountImpl()
        + getBank()
        + deposit()
        + withdraw()
        + balance()
    }
  }
  

  package aula08.ex1a {
    class BankAccountImplProxy {
        + BankAccountImplProxy()
        + deposit()
        + withdraw()
        + balance()
    }
  }
  

  package aula08.ex1a {
    class Company {
        {static} + user : User
        - emps : List<Employee>
        + admitPerson()
        + paySalaries()
        + employees()
    }
  }
  

  package aula08.ex1a {
    class Employee {
        - salary : double
        + Employee()
        + getSalary()
    }
  }
  

  package aula08.ex1a {
    class Person {
        - name : String
        + Person()
        + getName()
        + getBankAccount()
    }
  }
  

  package aula08.ex1a {
    class SharkCompany {
        {static} + main()
    }
  }
  

  package aula08.ex1a {
    enum User {
      OWNER
      COMPANY
    }
  }
  

  BankAccountImpl -up-|> BankAccount
  BankAccountImplProxy -up-|> BankAccount
  BankAccountImplProxy o-- BankAccount : real_bank_account
  Employee -up-|> Person
  Person o-- BankAccount : bankAccount


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
